added tensorfleet logo + fixed Casing on TensorFleet

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -136,3 +136,8 @@
       transparent 100%);
   color: #fff;
 }
+
+/* Force logo height to respect the config */
+.navbar__logo {
+  height: 20px;
+}
